--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <title>Contacto</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <h1>Nombre: Kevin</h1>
     <h1>Correo: KevDev</h1>
 </body>
 </html>
